# ForgeShieldOT

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  infra-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3d6a9e9ba513_initial_schema.py  b1f2a7c4d8e9_ai_message_attack_path_reasoning.py  c4e7f1a2b3d8_ai_message_intent.py
backend/app/: main.py
backend/app/ai/: factory.py  retrieval.py  sanitize.py  schema.py  service.py  system_prompt.py  triage.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  db.py  enums.py  exceptions.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  ai.py  asset.py  audit.py  base.py  compliance.py  config_mgmt.py  detection.py  incident.py  integration.py  org.py  report.py  user.py  vuln.py
backend/app/schemas/: ai.py  asset.py  auth.py  common.py  compliance.py  config_mgmt.py  detection.py  incident.py  ingestion.py  integration.py  report.py  risk.py  vuln.py
backend/app/seed/: cli.py  loaders.py  supabase_users.py
backend/app/services/: asset_service.py  audit_service.py  compliance_service.py  (+8 more)
backend/tests/: __init__.py  _env.py  conftest.py  test_ai.py  test_attack_path.py  test_auth_jwks.py  test_auth_rbac.py  test_compliance.py  test_csv.py  test_discovery.py  test_prompt_injection.py  test_reports.py  test_risk_engine.py  test_seed.py  test_vuln_matching.py
(+137 files in other folders)
