[project]
name = "forgeshield-ot-backend"
version = "0.1.0"
description = "ForgeShield OT — defensive OT/ICS cybersecurity console (backend)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008", "E501"]  # B008: FastAPI Depends() in defaults; E501: long lines OK

[tool.ruff.lint.per-file-ignores]
"app/models/*" = ["A003"]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
